tests/baselines/reference/strictModeReservedWordInModuleDeclaration.errors.txt
strictModeReservedWordInModuleDeclaration.ts(2,8): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(3,8): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(4,8): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(6,8): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(6,16): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.


==== strictModeReservedWordInModuleDeclaration.ts (5 errors) ====
    "use strict"
    module public { }
           ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
    module private { }
           ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
    module public.whatever {
           ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
    }
    module private.public.foo { }
           ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
                   ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.